# stablecoin-payment-gateway

./: .dockerignore  .env.example  .gitignore  .replit  ARCHITECTURE.md  Dockerfile  MOBILE.md  README.md  SECURITY_AUDIT.md  chainfx-platform-tests.json  go.mod  go.sum  replit.nix  schema.sql  schema_m2m.sql  schema_mobile_base.sql  schema_phase5.sql
.mcp/: server.json
attached_assets/: Pasted--C-digo-Go-Implementa-o-de-Prote-o-do-MCPSubstitua-a-su_1783883644612.txt  Pasted--MISS-O-IMPLEMENTAR-BITCOIN-REAL-NA-CAMADA-MOBILE-DO-BA_1784670423886.txt  Pasted-4-4-Webhook-Retry-System-yaml-O-que-j-tem-POST-webhooks_1783689704423.txt  Pasted-Bitcoin-Mobile-Gaps-Cr-ticos-bloqueiam-produ-o-Onde-Gap_1784676823492.txt  Pasted-O-pr-ximo-passo-estrat-gico-para-garantir-que-nenhuma-a_1783895910050.txt  Pasted-Para-um-sistema-h-brido-do-calibre-do-ChainFx-que-opera_1783893875759.txt  Pasted-implementem-nivel-de-exlencina-tecincia-rela-em-roduca-_1783893771745.txt
contracts/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
migrations/: 004_security_idor.sql  006_week2_hardening.sql  012_mcp_catalog_latency_indexes.sql  015_m2m_shared_deposit_addresses.sql  016_agent_fingerprint_observability.sql  016_mobile_cloudinary_media.sql  017_mobile_kyc_engine.sql  017_polygon_marketplace_plans.sql  018_m2m_payment_network.sql  020_nfc_closed_loop.sql  022_settlement_receipts_reconciliation.sql  024_nfc_terminal_registry.sql  025_nfc_fee_breakdown.sql  026_nfc_merchant_settlements.sql  schema.sql  (+7 more)
sdk/python/: README.md  chainfx.py  pyproject.toml
(+215 files in other folders)
